k8s/resnet/onnx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resnet-onnx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resnet-onnx
  template:
    metadata:
      labels:
        app: resnet-onnx
    spec:
      containers:
        - name: resnet-onnx
          image: svane222/resnet-onnx:cpu
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8001
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8001
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: resnet-onnx
spec:
  type: ClusterIP
  selector:
    app: resnet-onnx
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resnet-onnx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: resnet-onnx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resnet-onnx
                port:
                  number: 8001
