k8s/resnet/pytorch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resnet-pytorch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resnet-pytorch
  template:
    metadata:
      labels:
        app: resnet-pytorch
    spec:
      containers:
        - name: resnet-pytorch
          image: svane222/resnet-pytorch:cpu
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: resnet-pytorch
spec:
  type: ClusterIP
  selector:
    app: resnet-pytorch
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resnet-pytorch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: resnet-pytorch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resnet-pytorch
                port:
                  number: 8003
