k8s/resnet/torchscript.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resnet-torchscript
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resnet-torchscript
  template:
    metadata:
      labels:
        app: resnet-torchscript
    spec:
      containers:
        - name: resnet-torchscript
          image: svane222/resnet-torchscript:cpu
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: resnet-torchscript
spec:
  type: ClusterIP
  selector:
    app: resnet-torchscript
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resnet-torchscript-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: resnet-torchscript
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resnet-torchscript
                port:
                  number: 8002
